--- a/index.html
+++ b/index.html
@@ -6,11 +6,16 @@
   </head>
   <body>
     <a-scene>
-      <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-      <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-      <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-      <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
-      <a-sky color="#ECECEC"></a-sky>
+
+      <!<a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>>
+      <a-sky color= #009dc4 ></a-sky>
+      <a-entity gltf-model = "url(/assets/Whale (3).glb)" rotation="0 180 0" position = "0 0 -3 " scale = "0.05 0.05 0.05"> </a-entity>
+      <a-entity gltf-model = "url(/assets/SchoolOfSharks.glb)" rotation="0 180 0" position = "-1 -5 -3 " scale = "0.05 0.05 0.05"> </a-entity>
+      <a-entity gltf-model = "url(/assets/OrangeFishes.glb)" position = "0 -5 0 " scale = "0.01 0.01 0.01"> </a-entity>
+      <a-entity gltf-model = "url(/assets/OrangeFishes.glb)" position = "1 -5 -3 " scale = "0.01 0.01 0.01"> </a-entity>
+      <a-entity gltf-model = "url(/assets/OrangeFishes.glb)" position = "2 -5 -3 " scale = "0.01 0.01 0.01"> </a-entity>
+      <a-entity gltf-model = "url(/assets/yellowfish.glb)" position = "-1 -5 10 " scale = "0.05 0.05 0.05"> </a-entity>
+
     </a-scene>
       <script src = "script.js"> </script>
   </body>
